--- a/index.html
+++ b/index.html
@@ -3,11 +3,39 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Practice Application</title>
+    <title>UK Foundations</title>
     <link rel="stylesheet" href="style.css" />
     <script src="./app.js" defer></script>
   </head>
+
   <body>
-    <h1>Asian University for Women Endowment</h1>
+    <header>
+      <img src="UK Foundation.png" 5px; />
+      <div class="href=" id="href1"><h1>Home</h1></div>
+      <div class="href=" id="href2"><h1>Foundations</h1></div>
+      <div class="href=" id="href3"><h1>Partners</h1></div>
+      <div class="href=" id="href3"><h1>Gallery</h1></div>
+    </header>
+
+    <div class="content">
+      <h1>Foundations in the United Kingdom</h1>
+    </div>
+
+    <div class="content2">
+      <span>What is a foundation? What motivates founders and how to establish a
+        foundation? How many foundations currently exist in the United Kingdom?
+      </spa>
+    </div>
+      
+    <section class="button1">
+      <button>Press</button>
+      <button>Contact</button>
+    </section>
+
+    <section class="button2">
+      <button>EN</button>
+      <button>SP</button>
+      <button>DE</button>
+    </section>
   </body>
 </html>
