--- a/index.html
+++ b/index.html
@@ -3,39 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>UK Foundations</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>The Guardians of Life</title>
+    <link rel="stylesheet" href="./style.css" />
     <script src="./app.js" defer></script>
   </head>
 
   <body>
-    <header>
-      <img src="UK Foundation.png" 5px; />
-      <div class="href=" id="href1"><h1>Home</h1></div>
-      <div class="href=" id="href2"><h1>Foundations</h1></div>
-      <div class="href=" id="href3"><h1>Partners</h1></div>
-      <div class="href=" id="href3"><h1>Gallery</h1></div>
+   <header>
+    <div class="thumbnails-container">
+      <img class="thumbnail" id="thumbnail1" src="./PH eagle.webp" tabindex="0" title="Guardians of the Sky: Protect the Philippine Eagle" />
+      <img class="thumbnail" id="thumbnail2" src="./amore1.webp" tabindex="0" title="Solar Glow: Lighting Up Communities Sustainably"/>
+      <img class="thumbnail" id="thumbnail3" src="./amore2.webp" tabindex="0" title="Water's Promise: A Future of Clean, Accessible Water"/>
+    </div>
     </header>
+  
+    <div class="gallery-container">
+      <img
+        id="large-image"
+        src="PH eagle.webp"
+        alt="Guardians of the Sky: Protect the Philippine Eagle"
+        width="890" tabindex="0"/>
 
-    <div class="content">
-      <h1>Foundations in the United Kingdom</h1>
-    </div>
+       <div class="button">
+       <button id="button-next">next</button>
+       <button id="button-previous">previous</button>
+      </div>
 
-    <div class="content2">
-      <span>What is a foundation? What motivates founders and how to establish a
-        foundation? How many foundations currently exist in the United Kingdom?
-      </spa>
-    </div>
-      
-    <section class="button1">
-      <button>Press</button>
-      <button>Contact</button>
-    </section>
-
-    <section class="button2">
-      <button>EN</button>
-      <button>SP</button>
-      <button>DE</button>
-    </section>
+    <footer>All Rights Reserved - VST & Co.</footer>
   </body>
 </html>
